AC_INIT([claims], [1.0], [zhangleicasa@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_LIBTOOL
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  src/tree/Makefile
  src/cmysql/Makefile
  src/common/Makefile
  src/leetcode/Makefile
  src/leetcode/Tree/Makefile
  src/a/Makefile
  src/b/Makefile
  src/sec/Makefile
  src/sec/thir/Makefile
  src/sort/Makefile
  src/sync/Makefile
  src/external/Makefile
])
AC_OUTPUT

