AM_CPPFLAGS= -fPIC
AM_LDFLAGS=-lc -lm -lrt

noinst_LIBRARIES=libtree.a
libtree_a_SOURCES = AVLtree.cpp Heap.cpp Btree.cpp BStree.cpp\
					AVLtree.h Heap.h Btree.h BStree.h  

#libcommon_a_LDFLAGS= -ldl -lm -lpthread
#include_HEADERS=AVLtree.h Heap.h Btree.h BStree.h 
#EXTRA_DIST = AVLtree.h Heap.h Btree.h BStree.h